--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "sample_app_backend",
   "scripts": {
-    "dev": "ts-node src/index.ts"
+    "dev": "ts-node src/index.ts",
+    "test": "jest"
   },
   "dependencies": {
     "@prisma/client": "^3.7.0",
@@ -9,8 +10,11 @@
     "fastify-cors": "^6.0.2"
   },
   "devDependencies": {
+    "@types/jest": "^27.4.0",
     "@types/node": "^16.11.19",
+    "jest": "^27.4.7",
     "prisma": "^3.7.0",
+    "ts-jest": "^27.1.2",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.4"
   },
