--- a/package.json
+++ b/package.json
@@ -1,13 +1,17 @@
 {
   "name": "sample_app_backend",
   "scripts": {
+    "build": "tsc -p tsconfig.json",
+    "start": "node index.js",
     "dev": "ts-node src/index.ts",
     "test": "jest"
   },
   "dependencies": {
     "@prisma/client": "^3.7.0",
+    "@sinclair/typebox": "^0.23.2",
     "fastify": "^3.25.3",
-    "fastify-cors": "^6.0.2"
+    "fastify-cors": "^6.0.2",
+    "fastify-sensible": "^3.1.2"
   },
   "devDependencies": {
     "@types/jest": "^27.4.0",
