--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@prisma/client": "^3.7.0",
     "@sinclair/typebox": "^0.23.2",
     "fastify": "^3.25.3",
+    "fastify-bcrypt": "^1.0.0",
     "fastify-cors": "^6.0.2",
     "fastify-sensible": "^3.1.2"
   },
