--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "dependencies": {
     "@prisma/client": "^3.7.0",
     "@sinclair/typebox": "^0.23.2",
+    "ajv": "^8.9.0",
+    "ajv-formats": "^2.1.1",
     "fastify": "^3.25.3",
     "fastify-bcrypt": "^1.0.0",
     "fastify-cors": "^6.0.2",
