--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "fastify": "^3.25.3",
     "fastify-bcrypt": "^1.0.0",
     "fastify-cors": "^6.0.2",
+    "fastify-jwt": "^4.1.3",
     "fastify-sensible": "^3.1.2"
   },
   "devDependencies": {
