--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "start": "node index.js",
     "dev": "ts-node src/index.ts",
     "test": "jest",
-    "migrate": "prisma migrate dev"
+    "migrate": "prisma migrate dev",
+    "reset": "prisma migrate reset"
   },
   "dependencies": {
     "@prisma/client": "^3.7.0",
