--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "ajv-formats": "^2.1.1",
     "fastify": "^3.25.3",
     "fastify-bcrypt": "^1.0.0",
+    "fastify-cookie": "^5.5.0",
     "fastify-cors": "^6.0.2",
     "fastify-jwt": "^4.1.3",
     "fastify-sensible": "^3.1.2"
