--- a/package.json
+++ b/package.json
@@ -13,14 +13,15 @@
     "@sinclair/typebox": "^0.23.2",
     "ajv": "^8.9.0",
     "ajv-formats": "^2.1.1",
+    "bcrypt": "^5.0.1",
     "fastify": "^3.25.3",
-    "fastify-bcrypt": "^1.0.0",
     "fastify-cookie": "^5.5.0",
     "fastify-cors": "^6.0.2",
     "fastify-jwt": "^4.1.3",
     "fastify-sensible": "^3.1.2"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/jest": "^27.4.0",
     "@types/node": "^17.0.13",
     "jest": "^27.4.7",
